Fix anchored image visibility

--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ body.ttbm-modal-open {
     clear: both;
 }
 
-#chat .mes [data-ttbm-image-anchor] {
+#chat .mes [data-ttbm-image-anchor]:not(.ttbm-image-inline) {
     display: none !important;
 }
 
